tests/baselines/reference/duplicateIdentifierComputedName.errors.txt
duplicateIdentifierComputedName.ts(3,5): error TS2300: Duplicate identifier '["a"]'.


==== duplicateIdentifierComputedName.ts (1 errors) ====
    class C {
        ["a"]: string;
        ["a"]: string;
        ~~~~~
!!! error TS2300: Duplicate identifier '["a"]'.
    }
    